--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Steve Harris <doc@steveharris.me>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Nikola = "^8.1.3"
+ghp-import = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
