--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,6 @@ jobs:
     - name: Check out
       uses: actions/checkout@v2
     - name: Build and Deploy Nikola
-      uses: docsteveharris/nikola-action@v3.1.0-alpha
+      uses: getnikola/nikola-action@v3
       with:
         dry_run: false
