add preview gh pages

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,3 +16,6 @@ jobs:
         
       - name: Render Quarto Project
         uses: quarto-dev/quarto-actions/render@v2
+
+      - name: Deploy PR Preview
+        uses: rossjrw/pr-preview-action@v1.2.0
