--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,3 +19,5 @@ jobs:
 
       - name: Deploy PR Preview
         uses: rossjrw/pr-preview-action@v1.2.0
+          with:
+            source-dir: ./docs/
