--- a/publications/uclhal_quarto_listing.yaml
+++ b/publications/uclhal_quarto_listing.yaml
@@ -1,5 +1,5 @@
 - cite_key: arulkumaranUncontrolledInterventionsPandemics2020a
-  authors: N. Arulkumaran, T. Wright, S. Harris, M. Singer
+  authors: Arulkumaran N, Wright T, Harris S, Singer M
   title: 'Uncontrolled interventions during pandemics: a missed learning opportunity?'
   journal: Intensive Care Medicine
   year: 2020
@@ -7,10 +7,9 @@
   url: https://link.springer.com/10.1007/s00134-020-06180-6
   url4title: http://doi.org/10.1007/s00134-020-06180-6
 - cite_key: banerjeeEstimatingExcess1year2020a
-  authors: Amitava Banerjee, Laura Pasea, Steve Harris, Arturo Gonzalez-Izquierdo,
-    Ana Torralbo, Laura Shallcross, Mahdad Noursadeghi, Deenan Pillay, Neil Sebire,
-    Chris Holmes, Christina Pagel, Wai Keong Wong, Claudia Langenberg, Bryan Williams,
-    Spiros Denaxas, Harry Hemingway
+  authors: Banerjee A, Pasea L, Harris S, Gonzalez-Izquierdo A, Torralbo A, Shallcross
+    L, Noursadeghi M, Pillay D, Sebire N, Holmes C, Pagel C, Wong W, Langenberg C,
+    Williams B, Denaxas S, Hemingway H
   title: 'Estimating excess 1-year mortality associated with the COVID-19 pandemic
     according to underlying conditions and age: a population-based cohort study'
   journal: The Lancet
@@ -19,7 +18,7 @@
   url: https://linkinghub.elsevier.com/retrieve/pii/S0140673620308540
   url4title: http://doi.org/10.1016/S0140-6736(20)30854-0
 - cite_key: chenNudgingLearningHealth2022b
-  authors: Yang Chen, Steve Harris, Yvonne Rogers, Tariq Ahmad, Folkert W. Asselbergs
+  authors: Chen Y, Harris S, Rogers Y, Ahmad T, Asselbergs F
   title: 'Nudging within learning health systems: next generation decision support
     to improve cardiovascular care'
   journal: European Heart Journal
@@ -28,15 +27,12 @@
   url: https://academic.oup.com/eurheartj/article/43/13/1296/6525340
   url4title: http://doi.org/10.1093/eurheartj/ehac030
 - cite_key: critcareasiaEstablishingCriticalCare2020a
-  authors: ' , Abi Beane, Arjen M. Dondorp, Arshad Taqi, A. S. M. Areef Ahsan, Bharath
-    Kumar Tirupakuzhi Vijayaraghavan, Chairrat Permpikul, Christopher Pell, David
-    Gandy, Dilanthi Priyadarshani, Diptesh Aryal, Dong Phu Khiem, Duong Bich Thuy,
-    Guy Thwaites, Gyan Kayastha, Ishara Udayanga, Jorge Salluh, Khamsay Detleuxay,
-    Lakshmi Ranganathan, Lam Minh Yen, Lim Chew Har, Louise Thwaites, Madiha Hashmi,
-    Marcus J. Schultz, Mavuto Mukaka, Meghan Leaver, Mohd Basri Mat Nor, Muhammad
-    Hayat, Nick Day, Ramani Moonesinghe, Rashan Haniffa, Ratapum Champunot, Rebecca
-    Inglis, Rozina Sultana, Sophie Yacoub, Steve Harris, Subhash Prasad Acharya, Swagata
-    Tripathy, Syed Muneeb Ali, Tamilarasu Kadhiravan, Yoel Lubell'
+  authors: ' , Beane A, Dondorp A, Taqi A, Ahsan A, Vijayaraghavan B, Permpikul C,
+    Pell C, Gandy D, Priyadarshani D, Aryal D, Khiem D, Thuy D, Thwaites G, Kayastha
+    G, Udayanga I, Salluh J, Detleuxay K, Ranganathan L, Yen L, Har L, Thwaites L,
+    Hashmi M, Schultz M, Mukaka M, Leaver M, Nor M, Hayat M, Day N, Moonesinghe R,
+    Haniffa R, Champunot R, Inglis R, Sultana R, Yacoub S, Harris S, Acharya S, Tripathy
+    S, Ali S, Kadhiravan T, Lubell Y'
   title: Establishing a critical care network in Asia to improve care for critically
     ill patients in low- and middle-income countries
   journal: Critical Care
@@ -45,11 +41,9 @@
   url: https://ccforum.biomedcentral.com/articles/10.1186/s13054-020-03321-7
   url4title: http://doi.org/10.1186/s13054-020-03321-7
 - cite_key: domiziRelationshipNorepinephrineDose2020a
-  authors: Roberta Domizi, Sara Calcinaro, Steve Harris, Christian Beilstein, Christiaan
-    Boerma, Jean-Daniel Chiche, Annalia D'Egidio, Elisa Damiani, Abele Donati, Peter
-    M. Koetsier, Mary P. Madden, Daniel F. McAuley, Andrea Morelli, Paolo Pelaia,
-    Patrick Royer, Manu Shankar-Hari, Nadine Wickboldt, Parjam Zolfaghari, Mervyn
-    Singer
+  authors: Domizi R, Calcinaro S, Harris S, Beilstein C, Boerma C, Chiche J, D'Egidio
+    A, Damiani E, Donati A, Koetsier P, Madden M, McAuley D, Morelli A, Pelaia P,
+    Royer P, Shankar-Hari M, Wickboldt N, Zolfaghari P, Singer M
   title: 'Relationship between norepinephrine dose, tachycardia and outcome in septic
     shock: A multicentre evaluation'
   journal: Journal of Critical Care
@@ -58,7 +52,7 @@
   url: https://linkinghub.elsevier.com/retrieve/pii/S0883944119313590
   url4title: http://doi.org/10.1016/j.jcrc.2020.02.014
 - cite_key: flowerAcuteSTsegmentElevation2021a
-  authors: Luke Flower, Zdenek Bares, Georgina Santiapillai, Stephen Harris
+  authors: Flower L, Bares Z, Santiapillai G, Harris S
   title: Acute ST-segment elevation myocardial infarction secondary to vaccine-induced
     immune thrombosis with thrombocytopaenia (VITT)
   journal: BMJ Case Reports CP
@@ -67,10 +61,9 @@
   url: https://casereports.bmj.com/content/14/9/e245218
   url4title: http://doi.org/10.1136/bcr-2021-245218
 - cite_key: ghorashianTisagenlecleucelTherapyRelapsed2022a
-  authors: "Sara Ghorashian, Elad Jacoby, Barbara De Moerloose, Susana Rives, Denise\
-    \ Bonney, Geoff Shenton, Peter Bader, Nicole Bodmer, Agueda Molinos Quintana,\
-    \ Blanca Herrero, Mattia Algeri, Franco Locatelli, Kim Vettenranta, Berta Gonzalez,\
-    \ Andishe Attarbaschi, Stephen Harris, Jean Pierre Bourquin, Andr\xE9 Baruchel"
+  authors: Ghorashian S, Jacoby E, De Moerloose B, Rives S, Bonney D, Shenton G, Bader
+    P, Bodmer N, Quintana A, Herrero B, Algeri M, Locatelli F, Vettenranta K, Gonzalez
+    B, Attarbaschi A, Harris S, Bourquin J, Baruchel A
   title: 'Tisagenlecleucel therapy for relapsed or refractory B-cell acute lymphoblastic
     leukaemia in infants and children younger than 3 years of age at screening: an
     international, multicentre, retrospective cohort study'
@@ -80,8 +73,7 @@
   url: https://www.sciencedirect.com/science/article/pii/S2352302622002253
   url4title: http://doi.org/10.1016/S2352-3026(22)00225-3
 - cite_key: harrisClinicalDeploymentEnvironments2022
-  authors: Steve Harris, Tim Bonnici, Thomas Keen, Watjana Lilaonitkul, Mark J. White,
-    Nel Swanepoel
+  authors: Harris S, Bonnici T, Keen T, Lilaonitkul W, White M, Swanepoel N
   title: 'Clinical deployment environments: Five pillars of translational machine
     learning for health'
   journal: Frontiers in Digital Health
@@ -90,7 +82,7 @@
   url: https://www.frontiersin.org/articles/10.3389/fdgth.2022.939292
   url4title: http://doi.org/10.3389/fdgth.2022.939292
 - cite_key: harrisDonWantMy2021a
-  authors: Steve Harris
+  authors: Harris S
   title: 'I Don''t Want My Algorithm to Die in a Paper: Detecting Deteriorating Patients
     Early'
   journal: American Journal of Respiratory and Critical Care Medicine
@@ -99,7 +91,7 @@
   url: https://www.atsjournals.org/doi/10.1164/rccm.202102-0459ED
   url4title: http://doi.org/10.1164/rccm.202102-0459ED
 - cite_key: harrisTrialsPandemicsHere2021a
-  authors: Steve Harris, Ed Palmer, Kevin Fong
+  authors: Harris S, Palmer E, Fong K
   title: 'Trials in pandemics: here we go again?'
   journal: British Journal of Anaesthesia
   year: 2021
@@ -107,7 +99,7 @@
   url: https://linkinghub.elsevier.com/retrieve/pii/S0007091220308400
   url4title: http://doi.org/10.1016/j.bja.2020.10.008
 - cite_key: hashimPerceptionsUKClinicians2021a
-  authors: S. Hashim, D. J. N. Wong, L. Farmer, S. K. Harris, S. R. Moonesinghe
+  authors: Hashim S, Wong D, Farmer L, Harris S, Moonesinghe S
   title: Perceptions of UK clinicians towards postoperative critical care
   journal: Anaesthesia
   year: 2021
@@ -115,7 +107,7 @@
   url: https://onlinelibrary.wiley.com/doi/10.1111/anae.15302
   url4title: http://doi.org/10.1111/anae.15302
 - cite_key: keeleStrongerInstrumentsRefined2020a
-  authors: Luke Keele, Steve Harris, Samuel D. Pimentel, Richard Grieve
+  authors: Keele L, Harris S, Pimentel S, Grieve R
   title: Stronger instruments and refined covariate balance in an observational study
     of the effectiveness of prompt admission to intensive care units
   journal: 'Journal of the Royal Statistical Society: Series A (Statistics in Society)'
@@ -124,8 +116,8 @@
   url: https://onlinelibrary.wiley.com/doi/10.1111/rssa.12437
   url4title: http://doi.org/10.1111/rssa.12437
 - cite_key: kingMachineLearningRealtime2022a
-  authors: Zella King, Joseph Farrington, Martin Utley, Enoch Kung, Samer Elkhodair,
-    Steve Harris, Richard Sekula, Jonathan Gillham, Kezhi Li, Sonya Crowe
+  authors: King Z, Farrington J, Utley M, Kung E, Elkhodair S, Harris S, Sekula R,
+    Gillham J, Li K, Crowe S
   title: Machine learning for real-time aggregated prediction of hospital admission
     for emergency patients
   journal: npj Digital Medicine
@@ -134,8 +126,8 @@
   url: https://doi.org/10.1038/s41746-022-00649-y
   url4title: http://doi.org/10.1038/s41746-022-00649-y
 - cite_key: krishnamoorthyCausalInferencePerioperative2020b
-  authors: Vijay Krishnamoorthy, Danny J.N. Wong, Matt Wilson, Karthik Raghunathan,
-    Tetsu Ohnuma, Duncan McLean, S. Ramani Moonesinghe, Steve K. Harris
+  authors: Krishnamoorthy V, Wong D, Wilson M, Raghunathan K, Ohnuma T, McLean D,
+    Moonesinghe S, Harris S
   title: 'Causal inference in perioperative medicine observational research: part
     1, a graphical introduction'
   journal: British Journal of Anaesthesia
@@ -144,8 +136,8 @@
   url: https://linkinghub.elsevier.com/retrieve/pii/S0007091220302932
   url4title: http://doi.org/10.1016/j.bja.2020.03.031
 - cite_key: krishnamoorthyCausalInferencePerioperative2020c
-  authors: Vijay Krishnamoorthy, Duncan McLean, Tetsu Ohnuma, Steve K. Harris, Danny
-    J.N. Wong, Matt Wilson, Ramani Moonesinghe, Karthik Raghunathan
+  authors: Krishnamoorthy V, McLean D, Ohnuma T, Harris S, Wong D, Wilson M, Moonesinghe
+    R, Raghunathan K
   title: 'Causal inference in perioperative medicine observational research: part
     2, advanced methods'
   journal: British Journal of Anaesthesia
@@ -154,13 +146,11 @@
   url: https://linkinghub.elsevier.com/retrieve/pii/S0007091220303020
   url4title: http://doi.org/10.1016/j.bja.2020.03.032
 - cite_key: laiInformaticsConsultApproach2021a
-  authors: Alvina G. Lai, Wai Hoong Chang, Constantinos A. Parisinos, Michail Katsoulis,
-    Ruth M. Blackburn, Anoop D. Shah, Vincent Nguyen, Spiros Denaxas, George Davey
-    Smith, Tom R. Gaunt, Krishnarajah Nirantharakumar, Murray P. Cox, Donall Forde,
-    Folkert W. Asselbergs, Steve Harris, Sylvia Richardson, Reecha Sofat, Richard
-    J. B. Dobson, Aroon Hingorani, Riyaz Patel, Jonathan Sterne, Amitava Banerjee,
-    Alastair K. Denniston, Simon Ball, Neil J. Sebire, Nigam H. Shah, Graham R. Foster,
-    Bryan Williams, Harry Hemingway
+  authors: Lai A, Chang W, Parisinos C, Katsoulis M, Blackburn R, Shah A, Nguyen V,
+    Denaxas S, Davey Smith G, Gaunt T, Nirantharakumar K, Cox M, Forde D, Asselbergs
+    F, Harris S, Richardson S, Sofat R, Dobson R, Hingorani A, Patel R, Sterne J,
+    Banerjee A, Denniston A, Ball S, Sebire N, Shah N, Foster G, Williams B, Hemingway
+    H
   title: An informatics consult approach for generating clinical evidence for treatment
     decisions
   journal: BMC Medical Informatics and Decision Making
@@ -169,8 +159,8 @@
   url: https://bmcmedinformdecismak.biomedcentral.com/articles/10.1186/s12911-021-01638-z
   url4title: http://doi.org/10.1186/s12911-021-01638-z
 - cite_key: newcombeFutureAcuteEmergency2021a
-  authors: Virginia Newcombe, Timothy Coats, Paul Dark, Anthony Gordon, Steve Harris,
-    Danny F McAuley, David K Menon, Susanna Price, Zudin Puthucheary, Mervyn Singer
+  authors: Newcombe V, Coats T, Dark P, Gordon A, Harris S, McAuley D, Menon D, Price
+    S, Puthucheary Z, Singer M
   title: The future of acute and emergency care
   journal: Future Healthcare Journal
   year: 2021
@@ -178,7 +168,7 @@
   url: https://www.rcpjournals.org/lookup/doi/10.7861/fhj.2021-0097
   url4title: http://doi.org/10.7861/fhj.2021-0097
 - cite_key: postOxygenationCriticallyIll2020a
-  authors: Benjamin Post, Edward Palmer, Steve Harris, Mervyn Singer, Daniel Martin
+  authors: Post B, Palmer E, Harris S, Singer M, Martin D
   title: 'Oxygenation of the critically ill in selected intensive care units in the
     UK: are we usual?'
   journal: British Journal of Anaesthesia
@@ -187,10 +177,9 @@
   url: https://linkinghub.elsevier.com/retrieve/pii/S0007091220304931
   url4title: http://doi.org/10.1016/j.bja.2020.06.033
 - cite_key: shahDescriptorsSepsisUsing2021a
-  authors: Anoop D. Shah, Niall S. MacCallum, Steve Harris, David A. Brealey, Edward
-    Palmer, James Hetherington, Sinan Shi, David Perez-Suarez, Ari Ercole, Peter J.
-    Watkinson, Andrew Jones, Simon Ashworth, Richard Beale, Stephen J. Brett, Mervyn
-    Singer
+  authors: Shah A, MacCallum N, Harris S, Brealey D, Palmer E, Hetherington J, Shi
+    S, Perez-Suarez D, Ercole A, Watkinson P, Jones A, Ashworth S, Beale R, Brett
+    S, Singer M
   title: 'Descriptors of Sepsis Using the Sepsis-3 Criteria: A Cohort Study in Critical
     Care Units Within the U.K. National Institute for Health Research Critical Care
     Health Informatics Collaborative*'
@@ -200,8 +189,8 @@
   url: https://journals.lww.com/10.1097/CCM.0000000000005169
   url4title: http://doi.org/10.1097/CCM.0000000000005169
 - cite_key: tissotNaturalLanguageProcessing2020a
-  authors: Hegler C. Tissot, Anoop D. Shah, David Brealey, Steve Harris, Ruth Agbakoba,
-    Amos Folarin, Luis Romao, Lukasz Roguski, Richard Dobson, Folkert W. Asselbergs
+  authors: Tissot H, Shah A, Brealey D, Harris S, Agbakoba R, Folarin A, Romao L,
+    Roguski L, Dobson R, Asselbergs F
   title: 'Natural Language Processing for Mimicking Clinical Trial Recruitment in
     Critical Care: A Semi-Automated Simulation Based on the LeoPARDS Trial'
   journal: IEEE Journal of Biomedical and Health Informatics
@@ -210,8 +199,7 @@
   url: https://ieeexplore.ieee.org/document/9027845/
   url4title: http://doi.org/10.1109/JBHI.2020.2977925
 - cite_key: wilsonClinicianPreferenceInstrumental2022a
-  authors: Matthew G. Wilson, Aasiyah Rashan, Roman Klapaukh, Folkert W. Asselbergs,
-    Steve K. Harris
+  authors: Wilson M, Rashan A, Klapaukh R, Asselbergs F, Harris S
   title: Clinician preference instrumental variable analysis of the effectiveness
     of magnesium supplementation for atrial fibrillation prophylaxis in critical care
   journal: Scientific Reports
@@ -220,8 +208,7 @@
   url: https://www.nature.com/articles/s41598-022-21286-1
   url4title: http://doi.org/10.1038/s41598-022-21286-1
 - cite_key: wilsonEmbeddedPointCare2022a
-  authors: Matthew G Wilson, Folkert W Asselbergs, Ruben Miguel, David Brealey, Steve
-    K Harris
+  authors: Wilson M, Asselbergs F, Miguel R, Brealey D, Harris S
   title: 'Embedded point of care randomisation for evaluating comparative effectiveness
     questions: PROSPECTOR-critical care feasibility study protocol'
   journal: BMJ Open
@@ -230,7 +217,7 @@
   url: https://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2021-059995
   url4title: http://doi.org/10.1136/bmjopen-2021-059995
 - cite_key: wilsonLearningIndividualisedVariation2022a
-  authors: Matthew G. Wilson, Folkert W. Asselbergs, Steve K. Harris
+  authors: Wilson M, Asselbergs F, Harris S
   title: Learning from individualised variation for evidence generation within a learning
     health system
   journal: British Journal of Anaesthesia
@@ -239,9 +226,8 @@
   url: https://linkinghub.elsevier.com/retrieve/pii/S0007091222000757
   url4title: http://doi.org/10.1016/j.bja.2022.02.008
 - cite_key: wongDevelopingValidatingSubjective2020a
-  authors: Danny J. N. Wong, Steve Harris, Arun Sahni, James R. Bedford, Laura Cortes,
-    Richard Shawyer, Andrew M. Wilson, Helen A. Lindsay, Doug Campbell, Scott Popham,
-    Lisa M. Barneto, Paul S. Myles,  , S. Ramani Moonesinghe
+  authors: Wong D, Harris S, Sahni A, Bedford J, Cortes L, Shawyer R, Wilson A, Lindsay
+    H, Campbell D, Popham S, Barneto L, Myles P,  , Moonesinghe S
   title: 'Developing and validating subjective and objective risk-assessment measures
     for predicting mortality after major surgery: An international prospective cohort
     study'
