superhero theme (again)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,8 +37,6 @@ website:
 
 format:
   html:
-    theme: 
-      light: flatly
-      dark: darkly
+    theme: superhero
     css: styles.css
     toc: true
